--- a/3D-image-hover/package.json
+++ b/3D-image-hover/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text-wave",
+  "name": "apple-animation",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,18 +14,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.19",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@types/node": "^20.10.1",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.54.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "@mui/material": "^5.14.19",
+    "mui-image": "^1.0.7",
     "typescript": "^5.3.2",
+    "styled-components": "^6.1.1",
     "vite": "^5.0.4"
   }
 }
